--- a/style.css
+++ b/style.css
@@ -40,3 +40,28 @@ section{
     background-repeat: no-repeat;
     background-position:right ;
 }
+.single-experience{
+    box-shadow: 10px 10px 40px gray;
+    border-radius: 10px;
+    height: 60%;
+    margin-top: 100px;
+}
+.experience-area{
+    background-image: url("images/exp-bg.png");
+    background-repeat: no-repeat;
+    background-position: left;
+}
+#full-stack{
+    border-left: 7px solid;
+    border-image: linear-gradient(180deg,lightsalmon,tomato);
+    border-image-slice:1 ;
+}
+#baby-web{
+    border-left: 7px solid;
+    border-image: linear-gradient(180deg,blue,rgba(0, 255, 255, 0.884));
+    border-image-slice:1 ;
+}
+footer p{
+    text-align: center;
+    
+}
